--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "pixi.js": "^6.5.3"
+  },
   "devDependencies": {
     "@parcel/transformer-glsl": "2.7.0",
     "@types/pixi.js": "^5.0.0",
     "parcel": "^2.7.0",
-    "pixi.js": "^6.5.3",
     "querystring-es3": "^0.2.1",
     "typescript": "^4.8.3"
   }
